--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#">Habilidades</a></li>
                 <li><img src="./img/LogoGSD.png" alt=""></li>
                 <li><a href="#">Currículo</a></li>
@@ -39,8 +39,16 @@
     <!--Fim da Home-->
 
     <!--Inicio do Sobre-->
-    <section>
-        
+    <section class="section about" id="sobre">
+        <h2>Sobre</h2>
+        <div class="sub-border"></div>
+        <p>
+            Meu nome é Gabriel, tenho 21 anos e estou me graduando de Engenharia da Computação pelo INATEL. <br>
+            Moro em uma cidadezinha do sul de Minas Gerais, que ninguém conhece, chamada Santa Rita do sapucaí. <br>
+            Sou apaixonado por jogos, natureza e entusiasta em tudo que diz a respeito a tecnologia e metodologias criativas. <br>
+            Acredito que todos são seres únicos que podem fazer a diferença no mundo.
+        </p>
+
     </section>
     <!--Fim do Sobre-->
 
